[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/3d_car_customizable/scripts/settings.gd" type="Script" id=1]

[node name="Settings" type="MarginContainer"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
color = Color( 0, 0, 0, 0.729412 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 1180.0
margin_bottom = 578.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="List" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 50.0
margin_top = 20.0
margin_right = 1130.0
margin_bottom = 558.0

[node name="Car" type="VBoxContainer" parent="ScrollContainer/MarginContainer/List"]
margin_right = 1080.0
margin_bottom = 538.0

[node name="SettingsTitle" type="Label" parent="ScrollContainer/MarginContainer/List/Car"]
margin_left = 502.0
margin_right = 577.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Car Settings"

[node name="SavePreset" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car"]
margin_left = 387.0
margin_top = 18.0
margin_right = 692.0
margin_bottom = 42.0
size_flags_horizontal = 4

[node name="PresetText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/SavePreset"]
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = "Preset Name: "

[node name="PresetName" type="LineEdit" parent="ScrollContainer/MarginContainer/List/Car/SavePreset"]
margin_left = 95.0
margin_right = 215.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePreset" type="Button" parent="ScrollContainer/MarginContainer/List/Car/SavePreset"]
margin_left = 219.0
margin_right = 305.0
margin_bottom = 24.0
text = "Save Preset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetList Text" type="Label" parent="ScrollContainer/MarginContainer/List/Car"]
margin_top = 46.0
margin_right = 1080.0
margin_bottom = 111.0
text = "

Preset List
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetList" type="ItemList" parent="ScrollContainer/MarginContainer/List/Car"]
margin_top = 115.0
margin_right = 1080.0
margin_bottom = 124.0
auto_height = true

[node name="PresetButtons" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car"]
visible = false
margin_top = 128.0
margin_right = 812.0
margin_bottom = 148.0
alignment = 2

[node name="LoadPreset" type="Button" parent="ScrollContainer/MarginContainer/List/Car/PresetButtons"]
margin_right = 87.0
margin_bottom = 20.0
disabled = true
text = "Load Preset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ScrollContainer/MarginContainer/List/Car/PresetButtons"]
margin_left = 91.0
margin_right = 708.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="DeletePreset" type="Button" parent="ScrollContainer/MarginContainer/List/Car/PresetButtons"]
margin_left = 712.0
margin_right = 812.0
margin_bottom = 20.0
size_flags_horizontal = 9
disabled = true
text = "Delete Preset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptVariables" type="VBoxContainer" parent="ScrollContainer/MarginContainer/List/Car"]
margin_top = 128.0
margin_right = 250.0
margin_bottom = 377.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 0

[node name="ScriptVariables" type="Label" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_right = 250.0
margin_bottom = 65.0
text = "

ScriptVariables
"

[node name="EngineForceText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 69.0
margin_right = 250.0
margin_bottom = 83.0
text = "Max Engine Force"

[node name="EngineForce" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 87.0
margin_right = 250.0
margin_bottom = 111.0

[node name="MaxEngineForce" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/EngineForce"]
margin_right = 172.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1500.0
value = 200.0
scrollable = false
ticks_on_borders = true

[node name="MaxEngineForceBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/EngineForce"]
margin_left = 176.0
margin_right = 250.0
margin_bottom = 24.0
max_value = 3000.0
value = 200.0

[node name="BrakeText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 115.0
margin_right = 250.0
margin_bottom = 129.0
text = "Max Brake"

[node name="Brake" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 133.0
margin_right = 250.0
margin_bottom = 157.0

[node name="MaxBrake" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Brake"]
margin_right = 172.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 10.0
step = 0.01
value = 5.0
scrollable = false
ticks_on_borders = true

[node name="MaxBrakeBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Brake"]
margin_left = 176.0
margin_right = 250.0
margin_bottom = 24.0
max_value = 10.0
step = 0.01
value = 5.0

[node name="SteeringText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 161.0
margin_right = 250.0
margin_bottom = 175.0
text = "Max Steering"

[node name="Steering" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 179.0
margin_right = 250.0
margin_bottom = 203.0

[node name="MaxSteering" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Steering"]
margin_right = 172.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5
scrollable = false
ticks_on_borders = true

[node name="MaxSteeringBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Steering"]
margin_left = 176.0
margin_right = 250.0
margin_bottom = 24.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="SteeringSpeedText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 207.0
margin_right = 250.0
margin_bottom = 221.0
text = "Steering Speed"

[node name="SteeringSpeed" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables"]
margin_top = 225.0
margin_right = 250.0
margin_bottom = 249.0

[node name="SteeringSpeed" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/SteeringSpeed"]
margin_right = 172.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 10.0
step = 0.1
value = 5.0
scrollable = false
ticks_on_borders = true

[node name="SteeringSpeedBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/ScriptVariables/SteeringSpeed"]
margin_left = 176.0
margin_right = 250.0
margin_bottom = 24.0
max_value = 10.0
step = 0.1
value = 5.0

[node name="VehicleBody" type="VBoxContainer" parent="ScrollContainer/MarginContainer/List/Car"]
margin_top = 381.0
margin_right = 300.0
margin_bottom = 538.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0

[node name="VehicleBody" type="Label" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody"]
margin_right = 300.0
margin_bottom = 65.0
text = "

VehicleBody
"

[node name="MassText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody"]
margin_top = 69.0
margin_right = 300.0
margin_bottom = 83.0
text = "Mass"

[node name="Mass" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody"]
margin_top = 87.0
margin_right = 300.0
margin_bottom = 111.0

[node name="Mass" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody/Mass"]
margin_right = 222.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 3000.0
value = 30.0
scrollable = false
ticks_on_borders = true

[node name="MassBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody/Mass"]
margin_left = 226.0
margin_right = 300.0
margin_bottom = 24.0
max_value = 3000.0
value = 30.0

[node name="WeightText" type="Label" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 129.0
text = "Weight"

[node name="Weight" type="HBoxContainer" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody"]
margin_top = 133.0
margin_right = 300.0
margin_bottom = 157.0

[node name="Weight" type="HSlider" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody/Weight"]
margin_right = 222.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 3000.0
value = 800.0
scrollable = false
ticks_on_borders = true

[node name="WeightBox" type="SpinBox" parent="ScrollContainer/MarginContainer/List/Car/VehicleBody/Weight"]
margin_left = 226.0
margin_right = 300.0
margin_bottom = 24.0
max_value = 3000.0
value = 800.0
[connection signal="pressed" from="ScrollContainer/MarginContainer/List/Car/SavePreset/SavePreset" to="." method="SavePreset"]
[connection signal="item_selected" from="ScrollContainer/MarginContainer/List/Car/PresetList" to="." method="_on_PresetList_item_selected"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/List/Car/PresetButtons/LoadPreset" to="." method="LoadPreset"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/List/Car/PresetButtons/DeletePreset" to="." method="DeletePreset"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/EngineForce/MaxEngineForce" to="." method="_on_MaxEngineForce_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/EngineForce/MaxEngineForceBox" to="." method="_on_MaxEngineForce_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Brake/MaxBrake" to="." method="_on_MaxBrake_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Brake/MaxBrakeBox" to="." method="_on_MaxBrake_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Steering/MaxSteering" to="." method="_on_MaxSteering_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/Steering/MaxSteeringBox" to="." method="_on_MaxSteering_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/SteeringSpeed/SteeringSpeed" to="." method="_on_SteeringSpeed_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/ScriptVariables/SteeringSpeed/SteeringSpeedBox" to="." method="_on_SteeringSpeed_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/VehicleBody/Mass/Mass" to="." method="_on_Mass_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/VehicleBody/Mass/MassBox" to="." method="_on_Mass_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/VehicleBody/Weight/Weight" to="." method="_on_Weight_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/List/Car/VehicleBody/Weight/WeightBox" to="." method="_on_Weight_value_changed"]
